# charcha

./: .gitignore  LICENSE  Makefile  README.md  charcha.cabal  config.mk  stack.yaml
main/: Main.hs
src/Charcha/: Config.hs  FileOps.hs  OptArgs.hs  Paths.hs  Types.hs  Utils.hs
src/Charcha/IRC/: Commands.hs  Types.hs
