name: charcha
version: 0.0.1
synopsis: A TUI IRC client
description: A TUI IRC client
license: GPL
license-file: LICENSE
author: Partha Susarla <mail@spartha.org>
maintainer: Partha Susarla <mail@spartha.org>
homepage:
copyright:
category:
build-type: Simple
cabal-version: >= 1.18
tested-with:

extra-doc-files: README.md

source-repository head
  type:     git
  location: https://github.com/ajaysusarla/charcha
                  

Library
  hs-source-dirs: src
  exposed-modules:
                  Charcha.Utils
                , Charcha.Config
                , Charcha.OptArgs

  other-modules:
                -- Generated
                Paths_charcha
  build-depends:
                base >=4.8
              , base-compat >= 0.9 && < 0.10
              , gitrev >= 1.3 && < 1.4
  default-language: Haskell2010
  --build-tools:
  --            alex
  --          , happy
  ghc-options:
              -Wall
              -Werror
              -fno-warn-name-shadowing
              -fno-warn-missing-signatures
              -fno-warn-unused-matches
              -O2


executable charcha
  main-is: Main.hs
  hs-source-dirs: main
  build-depends:
                charcha
              , base >= 4.8
              , base-compat >= 0.9 && < 0.10
  default-language: Haskell2010
  --build-tools:
  --            alex
  --          , happy
  ghc-options:
              -Wall
              -Werror
              -fno-warn-name-shadowing
              -fno-warn-missing-signatures
              -fno-warn-unused-matches
              -O2

test-suite test-util
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: test-util.hs
  hs-source-dirs: main, src, test
  build-depends:
                charcha
              , base >= 4.8
              , base-compat >= 0.9 && < 0.10
  ghc-options:
              -Wall
